Show smaller result cards. Truncate video title with ellipses. Fixes #1 and #3

--- a/static/styles.css
+++ b/static/styles.css
@@ -71,7 +71,7 @@ body.app {
 
 .result-container {
 	float: left;
-	width: 31%;
+	width: 19%;
 	margin-right: 10px;
 	margin-bottom: 20px;
     background: #fff;
@@ -96,11 +96,13 @@ body.app {
 }
 
 .result-title {
-	padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 10px;
+    padding: 5px 10px;
     background: #fff;
     margin: 0;
+    font-size: .8em;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 @-webkit-keyframes rotate{
